reserves scrollbar gutter on html to prevent layout shift

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -139,6 +139,7 @@
       'calt' 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    scrollbar-gutter: stable;
   }
 
   ::selection {
